# Production_RAG_Pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  LEARNING_LOG.md  LEARNING_PATH.md  README.md  STACK_DECISIONS.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: finalize-step.prompt.md  implement-step.prompt.md
app/: main.py
pipeline/: chunker.py  embedder.py  extractor.py  generator.py  indexer.py  retriever.py
ui/: app.py
