[project]
name = "production-rag-pipeline"
version = "0.1.0"
description = "Production-grade RAG system for PDF knowledge bases"
requires-python = ">=3.11"

dependencies = [
    # Web API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # UI
    "streamlit>=1.35.0",

    # PDF text extraction
    "pypdf>=4.2.0",

    # Vector store client
    "qdrant-client>=1.9.0",

    # HTTP client (used to call Ollama REST API)
    "httpx>=0.27.0",

    # Data validation and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Environment variable loading
    "python-dotenv>=1.0.1",

    # File upload support for FastAPI
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # also used as async test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline", "ui"]
